<?xml version="1.0"?>
<package format="2">
  <name>docker_vcs_tools</name>
  <version>0.1.0</version>
  <description>Tool set for building 3D simulation and graphical tools and their application in a container images.</description>
  <license>Apache 2.0</license>
  <maintainer email="130s@2000.jukuin.keio.ac.jp">Isaac Saito</maintainer>
  <author email="130s@2000.jukuin.keio.ac.jp">Isaac Saito</author>
  <url type="website">https://github.com/130s/docker_vcstool</url>
  <buildtool_depend>catkin</buildtool_depend>
<!--  <buildtool_depend>python3-colcon-common-extensions</buildtool_depend> Comment in once https://github.com/ros/rosdistro/pull/28923 gets merged -->
  <exec_depend>python3-docker</exec_depend>
  <exec_depend>python3-sh</exec_depend>
</package>
