<?xml version="1.0"?>
<package format="2">
  <name>sim_container_tools</name>
  <version>0.0.0</version>
  <description>Tool set for building 3D simulation and graphical tools and their application in a container images.</description>

  <license>TODO</license>
  <maintainer email="130s@2000.jukuin.keio.ac.jp">Isaac Saito</maintainer>
  <author email="130s@2000.jukuin.keio.ac.jp">Isaac Saito</author>
  <!-- <url type="website">http://wiki.ros.org/sim_container_tools</url> -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>python3-docker</exec_depend>
  <exec_depend>python3-sh</exec_depend>
</package>
